--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
-VITE_API_URL=http://localhost:3000/api
-VITE_USE_MOCK=true
+# URL base del backend real
+VITE_API_URL_REAL=
+
+# URL base del backend mock/local
+VITE_API_URL_MOCK=http://localhost:3100/api
+
+# Fallback global cuando no definas un apartado específico
+VITE_USE_MOCK=false
+
+# Control por apartado (true = mock, false = backend real)
+VITE_MOCK_CATALOGOS=false
+VITE_MOCK_MAPEOS=false
+VITE_MOCK_TAREAS=true
+VITE_MOCK_COLUMNAS=false
