--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,5 @@ VITE_USE_MOCK=false
 VITE_MOCK_CATALOGOS=false
 VITE_MOCK_MAPEOS=false
 VITE_MOCK_TAREAS=true
+VITE_MOCK_HORARIOS=true
 VITE_MOCK_COLUMNAS=false
