--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,6 @@ VITE_USE_MOCK=false
 VITE_MOCK_CATALOGOS=false
 VITE_MOCK_MAPEOS=false
 VITE_MOCK_TAREAS=true
+VITE_MOCK_TAREAS_MONITOR=true
 VITE_MOCK_HORARIOS=true
 VITE_MOCK_COLUMNAS=false
